# -vision-one-million

./: .env  .env.example  README.md  _commit_msg.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
config/: regional_scorecard_data_sources.yaml  sources.yaml
dashboard/: __init__.py  app.py  db.py  scorecard_data.py
dashboard/pages/: domain_detail.py  overview.py  system_health.py
data/: scorecard.db
scripts/: seed_db.py
src/agent/: __init__.py  database.py  scorecard_agent.py  tools.py
src/ingestion/: __init__.py  __main__.py  api_fetcher.py  base.py  engine.py  models.py  pdf_fetcher.py  scrape_fetcher.py  source_registry.py  tavily_fallback.py
src/ingestion/fetchers/: __init__.py  employment_fetcher.py  healthcare_fetcher.py  housing_fetcher.py  placemaking_fetcher.py  transportation_fetcher.py
src/validation/: __init__.py  anomaly_detector.py  cleaner.py  models.py
src/vision_one_million.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
